gsap練習ベース

--- a/OHA/src/index.html
+++ b/OHA/src/index.html
@@ -669,6 +669,10 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 	<!-- swiper@11 -->
 	<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+	<!-- GSAP -->
+	<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+	<script src="./assets/js/my-gsap.js"></script>
+
 	<script src="./assets/js/script.min.js"></script>
 </body>
 
