--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -80,6 +80,24 @@
 		<div class="box --alpha-yoyo">alpha</div>
 		<div class="box --autoAlpha-yoyo"><div class="text">autoAlpha</div></div>
 	</div>
+	<div class="">
+		<div class="box2 --ease-yoyo --power1"></div>
+		<div class="box2 --ease-yoyo --power2"></div>
+		<div class="box2 --ease-yoyo --power3"></div>
+		<div class="box2 --ease-yoyo --power4"></div>
+	</div>
+	<div class="" style="margin-top: 30px">
+		<div class="box2 --ease --back"></div>
+		<div class="box2 --ease --back1"></div>
+		<div class="box2 --ease --back2"></div>
+		<div class="box2 --ease --back3"></div>
+	</div>
+	<div class="" style="margin-top: 30px">
+		<div class="box2 --ease --elastic"></div>
+		<div class="box2 --ease --elastic1"></div>
+		<div class="box2 --ease --elastic2"></div>
+		<div class="box2 --ease --elastic3"></div>
+	</div>
 </div><!-- /.inner -->
 
 	<!-- jquery -->
