--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -137,6 +137,15 @@
 		<div class="box --timeline-time4"></div>
 		<div class="box --timeline-time5"></div>
 	</div>
+	<h2 style="margin-top: 110px;">タイムラインの時間指定でモーションを重ねる(ネスト版)</h2>
+	<p class="--timeline-time__txt2"></p>
+	<div class="flex" style="padding: 100px; padding-top: 100px;">
+		<div class="box --timeline-time"></div>
+		<div class="box --timeline-time"></div>
+		<div class="box --timeline-time"></div>
+		<div class="box --timeline-time"></div>
+		<div class="box --timeline-time"></div>
+	</div>
 
 </div><!-- /.inner -->
 
